--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <!-- Google fonts -->
 
     
-    <title>React App For the Gym</title>
+    <title>React App For the Gym updating!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
